[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/bg/space background.png" type="Texture" id=2]
[ext_resource path="res://assets/art/player/walk-1.png" type="Texture" id=3]
[ext_resource path="res://assets/art/player/walk-2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/mainmenu/title.png" type="Texture" id=5]
[ext_resource path="res://assets/art/mainmenu/play.png" type="Texture" id=6]
[ext_resource path="res://assets/art/mainmenu/options.png" type="Texture" id=7]
[ext_resource path="res://assets/art/mainmenu/quit.png" type="Texture" id=8]
[ext_resource path="res://assets/art/mainmenu/myname.png" type="Texture" id=9]
[ext_resource path="res://scenes/OptionsMenu.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

position = Vector2( -5, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="Player" type="AnimatedSprite" parent="."]

position = Vector2( 612.746, 325.475 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "default"

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 826.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 726.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 537.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 537.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 537.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 1

[node name="Play" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 79.0
margin_right = 93.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Options" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 135.0
margin_right = 155.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Quit" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 88.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 541.0
margin_right = 676.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 135.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 350
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Name" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 350.0
margin_right = 135.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
texture = ExtResource( 9 )
stretch_mode = 0

[node name="OptionsMenu" parent="." instance=ExtResource( 10 )]

visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 750.0
margin_bottom = 430.0

[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Play" to="." method="_on_Play_gui_input"]

[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_gui_input"]

[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Quit" to="." method="_on_Quit_gui_input"]


