[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/bg/space background.png" type="Texture" id=2]
[ext_resource path="res://assets/art/player/walk-1.png" type="Texture" id=3]
[ext_resource path="res://assets/art/player/walk-2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/mainmenu/title.png" type="Texture" id=5]
[ext_resource path="res://assets/art/mainmenu/playbtn.png" type="Texture" id=6]
[ext_resource path="res://assets/art/mainmenu/quitbtn.png" type="Texture" id=7]
[ext_resource path="res://scenes/OptionsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( -5, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="Player" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 612.746, 325.475 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "default"

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 826.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
_sections_unfolded = [ "Anchor" ]

[node name="H" type="HBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 1526.0
margin_bottom = 906.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="V" type="VBoxContainer" parent="MarginContainer/H" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 537.0
margin_bottom = 856.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Logo" type="TextureRect" parent="MarginContainer/H/V" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 537.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/H/V" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 537.0
margin_bottom = 856.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Anchor", "Visibility", "custom_constants" ]

[node name="Play" type="TextureRect" parent="MarginContainer/H/V/MenuOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 213.0
margin_top = 328.0
margin_right = 323.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="Quit" type="TextureRect" parent="MarginContainer/H/V/MenuOptions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 213.0
margin_top = 406.0
margin_right = 323.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Focus", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/H" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 541.0
margin_right = 541.0
margin_bottom = 856.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/H/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 856.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 350
alignment = 0

[node name="OptionsMenu" parent="." index="3" instance=ExtResource( 8 )]

visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 750.0
margin_bottom = 430.0
items = [ "Item 0", null, false, false, false, -1, 0, null, "", false, "Item 1", null, false, false, false, -1, 0, null, "", false ]

[node name="MarginContainer2" type="MarginContainer" parent="." index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_right = 8.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LevelSelectScreen" parent="MarginContainer2" index="0" instance=ExtResource( 9 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 8.0
margin_bottom = 40.0

[node name="Tween" type="Tween" parent="MarginContainer2/LevelSelectScreen" index="4"]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="gui_input" from="MarginContainer/H/V/MenuOptions/Play" to="." method="_on_Play_gui_input"]

[connection signal="gui_input" from="MarginContainer/H/V/MenuOptions/Quit" to="." method="_on_Quit_gui_input"]

[connection signal="back_btn_pressed" from="MarginContainer2/LevelSelectScreen" to="." method="_on_LevelSelectScreen_back_btn_pressed"]


